--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -21,8 +21,8 @@ div {
   width: 1000px;
   margin: 0 auto;
   margin-top: 50px;
-  background-image: url(/assets/color_bg.png);
-  background-size: cover;
+/*  background-image: url(/assets/color_bg.png);
+  background-size: cover;*/
  -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
       -o-border-radius: 10px;
@@ -40,10 +40,10 @@ div {
 .box {
   height: 99px;
   width: 8px;
-/*-webkit-border-radius: 200px;
+-webkit-border-radius: 200px;
     -moz-border-radius: 200px;
       -o-border-radius: 200px;
-         border-radius: 200px;*/
+         border-radius: 200px;
 }
 
 .red {
