Got the app working nicely.  Added the final touches on the dynamic js

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,6 +5,7 @@
 <title>Web Audio API</title>
 </head>
 <body>
+  <h1>Audio Avatar - Music Visualizer</h1>
   <p class="play">Play</p>
   <p class="stop">Stop</p>
 </body>
